<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.bakingcakes.Fragments.DetailsFragment">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.AppBarLayout
                android:id="@+id/app_bar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/app_bar_height"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimaryTransparent"
                android:fitsSystemWindows="true"
                android:textStyle="bold"
                android:theme="@style/MyActionBar"
                tools:ignore="MissingConstraints">

                <android.support.design.widget.CollapsingToolbarLayout
                    android:id="@+id/toolbar_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    app:collapsedTitleTextAppearance="@style/CollapsedAppBar"
                    app:contentScrim="?attr/colorPrimary"
                    app:expandedTitleTextAppearance="@style/ExpandedAppBar"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed"
                    app:toolbarId="@+id/toolbar">

                    <ImageView
                        android:id="@+id/backdrop"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/backdrop"
                        android:fitsSystemWindows="true"
                        android:scaleType="centerCrop"
                        app:layout_collapseMode="parallax" />

                    <android.support.v7.widget.Toolbar
                        android:id="@+id/detail_toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        android:background="@color/colorPrimaryTransparent"
                        app:layout_collapseMode="pin"

                        app:popupTheme="@style/MyActionBar" />

                </android.support.design.widget.CollapsingToolbarLayout>

            </android.support.design.widget.AppBarLayout>

            <android.support.v4.widget.NestedScrollView
                android:id="@+id/item_ingredients_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                app:layout_constraintTop_toBottomOf="@+id/app_bar">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/servings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@+id/item_ingredients_container"
                        app:layout_constraintTop_toBottomOf="@+id/app_bar"
                        tools:fontFamily="sans-serif"
                        tools:text="8 servings" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior">

                        <include layout="@layout/ingredients_item_list" />
                    </FrameLayout>


                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior">

                        <include layout="@layout/steps_item_list" />
                    </FrameLayout>
                </LinearLayout>
            </android.support.v4.widget.NestedScrollView>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/share_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:layout_margin="@dimen/fab_margin"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_anchor="@+id/item_ingredients_container"
                app:layout_anchorGravity="top|end"
                app:layout_constraintBottom_toBottomOf="@+id/app_bar"
                app:layout_constraintEnd_toEndOf="@+id/app_bar"
                app:layout_constraintTop_toBottomOf="@+id/app_bar"
                app:srcCompat="@android:drawable/ic_menu_share" />


        </android.support.constraint.ConstraintLayout>
    </FrameLayout>
</layout>