<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/cake_card_height"
        android:layout_marginLeft="@dimen/cake_card_horizontal_margin"
        android:layout_marginRight="@dimen/cake_card_horizontal_margin"
        android:layout_marginBottom="@dimen/cake_card_bottom_margin">

        <!--card_view:cardCornerRadius="30dp"-->
        <!--card_view:cardElevation="6dp">-->
        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cake_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/image"
                android:scaleType="fitXY"
                android:textAppearance="?attr/textAppearanceListItem" />

        </LinearLayout>

    </android.support.v7.widget.CardView>
</layout>