<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.bakingcakes.Fragments.StepFragment">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                android:id="@+id/exoPlayerView"
                app:fastforward_increment="6000"
                app:rewind_increment="2000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/step_thumbnail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/exoPlayerView"
                android:adjustViewBounds="true"
                android:contentDescription="@string/step_thumbnail"
                android:scaleType="fitXY"
                android:visibility="gone"
                tools:ignore="MissingConstraints" />

            <ProgressBar
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:progressTint="@color/colorPrimary"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/exoPlayerView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/exoPlayerView"
                app:layout_constraintTop_toTopOf="@+id/exoPlayerView" />

            <View
                android:layout_width="2dp"
                android:layout_height="0dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/exoPlayerView"
                app:layout_constraintStart_toStartOf="@+id/exoPlayerView"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent">

                <Button
                    android:id="@+id/back"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:drawableStart="@drawable/back"
                    android:text="@string/previous_step"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/forward"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:drawableEnd="@drawable/forward"
                    android:text="@string/next_step"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_margin="25sp"
                android:layout_marginBottom="8dp"
                android:lineSpacingMultiplier="1.1"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@+id/exoPlayerView"
                tools:layout_editor_absoluteX="25dp" />

        </android.support.constraint.ConstraintLayout>
    </FrameLayout>
</layout>